# news-letter

./: .env  Cargo.toml  configuration.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
